Changed pager size to avoid nav arrows flickering

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ body {
 }
 #pager {
 	width: 200px;
-	margin: 10px auto 0 auto;
+	margin: 0px auto 0 auto;
+	padding-top: 10px;
 	text-align: center;
 }
 #pager a { 
